fix background-bubble bleeding outside of background-container

--- a/style.scss
+++ b/style.scss
@@ -13,13 +13,14 @@ body {
     bottom: 0%;
     left: 0%;
     right: 0%;
-    display: grid;
-    grid-template-columns: 40vh 55vh;
-    padding: 15px;
     height: 65vh;
     width: 95vh;
+    display: grid;
     margin: auto;
     margin-top: 10%;
+    grid-template-columns: 40vh 55vh;
+    padding: 15px;
+    overflow: hidden;
     border-radius: 4%;
     background-color: $white;
     box-shadow: 0 5px 25px 0 rgba(30, 0, 161, 0.25)
@@ -41,12 +42,13 @@ body {
 }
 
 .background-right {
+    z-index: 2;
+    font-family: 'ubunturegular';
     position: relative;
     top: 0%;
     bottom: 0%;
     left: 50%;
     right: 0%;
-    font-family: 'ubunturegular';
     max-width: 46rem;
     display: grid;
 
@@ -63,7 +65,6 @@ body {
     width: 700px;
     border-radius: 100%;
     opacity: 20%;
-    overflow: hidden;
     background-color: $dark-grey;
 }
 
@@ -72,12 +73,12 @@ body {
 
 .section-title {
     z-index: 2;
+    font-family: 'ubuntubold';
     position: absolute;
     top: 0%;
     bottom: 0%;
     left: -55%;
     right: 0%;
-    font-family: 'ubuntubold';
     padding: 1vh;
     color: $dark-blue;
 
@@ -85,12 +86,12 @@ body {
 
 .prompt {
     z-index: 2;
+    font-family: inherit;
     position: absolute;
     top: 18%;
     bottom: 0%;
     left: -55%;
     right: 0%;
-    font-family: inherit;
     color: $grey;
     margin-top: -5vh;
     padding: 1vh;
@@ -121,17 +122,18 @@ body {
 
 .nagivation-button {
     z-index: 2;
-    position: absolute;
-    right: 10%;
-    bottom: 0%;
-    background-color: $red;
     font-family: 'ubuntubold';
-    color: $white;
-    line-height: 1;
+    position: absolute;
+    top: 5%;
+    bottom: 0%;
+    left: 10%;
+    right: 0%;
+    border-radius: 100vw;
     padding: 1rem 2rem;
+    line-height: 1.5;
     max-width: max-content;
     margin-top: 100%;
     cursor: pointer;
-    border-radius: 100vw;
+    color: $white;
+    background-color: $red;
 }
-
